# amplifier-bundle-zerovector

./: .gitignore  README.md  amplifier-roadmap.dot  bundle.dot  bundle.md
agents/: architect.md  builder.md  critic.md  intent-analyst.md  shipper.md
behaviors/: fidelity.yaml  zerovector-crew.yaml  zerovector-methodology.yaml
context/: crew-instructions.md  crew-routing.md  domain-tuning.md  fidelity-framework.md  using-zerovector.md  zerovector-principles.md
docs/: ROADMAP-crew-gate.md
docs/plans/: 2026-03-08-crew-agent-fidelity-awareness.md  2026-03-08-hooks-fidelity-reporter.md  2026-03-08-tool-fidelity-state.md  2026-03-08-zerovector-v03-design.md  2026-03-08-zerovector-v03-implementation.md
modes/: architect.md  build.md  crew-build.md  crew-content.md  crew-platform.md  crew-product.md  crew-research.md  crew.md  design.md  investigate.md  make.md  write.md
modules/hooks-crew-gate/: pyproject.toml
modules/hooks-crew-gate/amplifier_module_hooks_crew_gate/: __init__.py
modules/hooks-fidelity-reporter/: pyproject.toml
modules/hooks-fidelity-reporter/amplifier_module_hooks_fidelity_reporter/: __init__.py
modules/tool-fidelity-state/: pyproject.toml
modules/tool-fidelity-state/amplifier_module_tool_fidelity_state/: __init__.py
recipes/: build-and-review.yaml  decode-intent.yaml  fidelity-convergence.yaml  finish-artifact.yaml  intent-to-artifact.yaml  verify-artifact.yaml
research/: 00-source-material.md  01-philosophy-deep-dive.md  02-amplifier-alignment.md  03-crew-design-rationale.md  04-implementation-decisions.md  05-roadmap.md
skills/: crew-operating-instructions.md  domain-tuning.md  fidelity-framework.md
tests/: test_bundle.py  test_readme.py
tests/agents/: conftest.py  test_architect_agent.py  test_builder_agent.py  test_critic_agent.py  test_intent_analyst_agent.py  test_shipper_agent.py
tests/behaviors/: test_fidelity_behavior.py  test_zerovector_crew_behavior.py
tests/context/: test_crew_instructions.py  (+1 more)
(+60 files in other folders)
