[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-hooks-fidelity-reporter"
version = "0.3.0"
description = "Fidelity reporter hook — live ANSI dashboard + ephemeral agent routing injection"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
hooks-fidelity-reporter = "amplifier_module_hooks_fidelity_reporter:mount"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_hooks_fidelity_reporter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
